Many media/media-fragments/ tests are crashing due to other tests that run before them. https://bugs.webkit.org/show_bug.cgi?id=223277 <rdar://problem/75492360>

Reviewed by Eric Carlson.

Source/WebCore:

Work around the crashing function by pre-conforming the fragment identifier according
to the format required by the crashing function.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::hasBrokenFragmentSupport):
(WebCore::conformFragmentIdentifierForURL):
(WebCore::MediaPlayerPrivateAVFoundationObjC::createAVAssetForURL):

Source/WebCore/PAL:

* pal/cocoa/AVFoundationSoftLink.h:
* pal/cocoa/AVFoundationSoftLink.mm:

LayoutTests:

* platform/mac/TestExpectations:


Canonical link: https://commits.webkit.org/235552@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274734 268f45cc-cd09-0410-ab3c-d52691b4dbfc